Feasibility aware BO GTData

--- a/BO-GTData/BO_feasibility_aware.ipynb
+++ b/BO-GTData/BO_feasibility_aware.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "import gpytorch\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "import random"
+    "import random\n",
+    "from scipy.stats import norm\n",
+    "from scipy.optimize import minimize"
    ]
   },
   {
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,39 +188,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#define likelihood and initialize model - regression\n",
     "reg_likl = gpytorch.likelihoods.GaussianLikelihood()\n",
     "reg_model1 = ExactGPModel(train_x, train_y1, reg_likl)\n",
     "reg_model2 = ExactGPModel(train_x, train_y2, reg_likl)\n",
     "reg_model3 = ExactGPModel(train_x, train_y3, reg_likl)\n",
     "\n",
+    "#define likelihood and initialize model - classification\n",
     "cls_likl = gpytorch.likelihoods.DirichletClassificationLikelihood(train_y4, learn_additional_noise=False, alpha_epsilon=1e-4)\n",
     "cls_model = DirichletGPModel(train_x, cls_likl.transformed_targets, cls_likl, num_classes=cls_likl.num_classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "training_iter = 50\n",
     "\n",
+    "#train model - regression\n",
     "reg_model1, reg_likl1 = train_reg_gp(reg_model1, reg_likl, train_x, train_y1, training_iter)\n",
     "reg_model2, reg_likl2 = train_reg_gp(reg_model2, reg_likl, train_x, train_y2, training_iter)\n",
-    "reg_model3, reg_likl3 = train_reg_gp(reg_model3, reg_likl, train_x, train_y3, training_iter)"
+    "reg_model3, reg_likl3 = train_reg_gp(reg_model3, reg_likl, train_x, train_y3, training_iter)\n",
+    "\n",
+    "#train model - regression\n",
+    "cls_model, cls_likl = train_cls_gp(cls_model, cls_likl, train_x, training_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cls_model, cls_likl = train_cls_gp(cls_model, cls_likl, train_x, training_iter)"
+    "def predict(model, likl, X):\n",
+    "    with torch.no_grad(), gpytorch.settings.fast_pred_var():\n",
+    "        pred = likl(model(X))\n",
+    "        mean = pred.mean\n",
+    "        std = pred.stddev\n",
+    "    return mean, std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sum the available models to convert mutli obj problem to single obj\n",
+    "def multi_objective_predict(X, models, liklihoods):\n",
+    "    mean = 0\n",
+    "    var = 0\n",
+    "    for model in models:\n",
+    "        tmp_mean, tmp_std = predict(model, liklihoods[0], torch.tensor(X, dtype=torch.float))\n",
+    "        mean += tmp_mean\n",
+    "        var += tmp_std**2\n",
+    "    return mean, var**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to calculate acquisition function \n",
+    "def acquisition_func(X, models, liklihoods, y_min_curr):\n",
+    "    X = np.reshape(X, (1, -1))\n",
+    "    pred_mean, pred_std = multi_objective_predict(X, models, liklihoods) \n",
+    "    improv = -y_min_curr + pred_mean\n",
+    "    z_score = np.divide(improv, pred_std + 1E-9)\n",
+    "    acf = np.multiply(improv, norm.cdf(z_score)) + np.multiply(pred_std, norm.pdf(z_score))\n",
+    "    return (-1.0) * acf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# search for best point\n",
+    "\n",
+    "x_bounds = np.array([[2000, 10000], [0, 100], [0, 40], [5000, 15000], [80, 100], [0,100], [60, 100], [70, 100]])\n",
+    "search_grid = np.random.uniform(x_bounds[:, 0], x_bounds[:, 1], size=(100, len(x_bounds)))\n",
+    "\n",
+    "mo_models = [reg_model1, reg_model2]\n",
+    "mo_likls = [reg_likl1, reg_likl2]\n",
+    "\n",
+    "reg_model1.eval()\n",
+    "reg_model2.eval()\n",
+    "reg_likl1.eval()\n",
+    "reg_likl2.eval()\n",
+    "\n",
+    "y_best_curr = torch.max(train_y1 + train_y2).item()\n",
+    "\n",
+    "acf_vals = [acquisition_func(search_grid[i, :].reshape(1, -1), mo_models, mo_likls, y_best_curr) for i in range(100)]\\\n",
+    "\n",
+    "acf_vals = np.array(acf_vals).reshape(100,)\n",
+    "top_idx = np.argsort(acf_vals)\n",
+    "search_grid = search_grid[top_idx[0:10]].reshape(10,-1)\n",
+    "\n",
+    "best_acquisition_values = 1\n",
+    "best_x = None\n",
+    "for i, starting_point in enumerate(search_grid):\n",
+    "    res = minimize(fun=acquisition_func, \n",
+    "                   x0=starting_point, \n",
+    "                   bounds=x_bounds,\n",
+    "                   method='L-BFGS-B',\n",
+    "                   args=(mo_models, mo_likls, y_best_curr))\n",
+    "    if res.fun < best_acquisition_values:\n",
+    "        best_acquisition_values = res.fun\n",
+    "        best_x = res.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\goura\\AppData\\Local\\Temp\\ipykernel_14908\\4118473385.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  tmp_mean, tmp_std = predict(model, liklihoods[0], torch.tensor(X, dtype=torch.float))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.0801]), tensor([1.7745]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_x = torch.tensor(best_x.reshape(1,-1), dtype=torch.float)\n",
+    "multi_objective_predict(best_x, mo_models, mo_likls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\goura\\anaconda3\\envs\\gpytorch\\Lib\\site-packages\\gpytorch\\likelihoods\\gaussian_likelihood.py:300: GPInputWarning: You have passed data through a FixedNoiseGaussianLikelihood that did not match the size of the fixed noise, *and* you did not specify noise. This is treated as a no-op.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-3.2414],\n",
+       "         [-2.1741]]),\n",
+       " tensor([[2.2303],\n",
+       "         [2.3356]]))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cls_model.eval()\n",
+    "cls_likl.eval()\n",
+    "predict(cls_model, cls_likl, best_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2.6837e+03, 8.3361e+01, 1.4722e+00, 1.3654e+04, 8.6976e+01, 4.1206e+01,\n",
+       "         6.6321e+01, 8.0358e+01]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_x"
    ]
   },
   {
