--- a/BO-GTData/BO_feasibility_aware.ipynb
+++ b/BO-GTData/BO_feasibility_aware.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,8 +244,8 @@
     "def multi_objective_predict(X, models, liklihoods):\n",
     "    mean = 0\n",
     "    var = 0\n",
-    "    for model in models:\n",
-    "        tmp_mean, tmp_std = predict(model, liklihoods[0], torch.tensor(X, dtype=torch.float))\n",
+    "    for i in range(len(models)):\n",
+    "        tmp_mean, tmp_std = predict(models[i], liklihoods[i], torch.tensor(X, dtype=torch.float))\n",
     "        mean += tmp_mean\n",
     "        var += tmp_std**2\n",
     "    return mean, var**0.5"
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,14 +281,17 @@
     "mo_models = [reg_model1, reg_model2]\n",
     "mo_likls = [reg_likl1, reg_likl2]\n",
     "\n",
-    "reg_model1.eval()\n",
-    "reg_model2.eval()\n",
-    "reg_likl1.eval()\n",
-    "reg_likl2.eval()\n",
+    "# reg_model1.eval()\n",
+    "# reg_model2.eval()\n",
+    "# reg_likl1.eval()\n",
+    "# reg_likl2.eval()\n",
+    "for i in range(len(mo_models)):\n",
+    "    mo_models[i].eval()\n",
+    "    mo_likls[i].eval()\n",
     "\n",
-    "y_best_curr = torch.max(train_y1 + train_y2).item()\n",
+    "y_best_curr = torch.min(-(train_y1 + train_y2)).item()\n",
     "\n",
-    "acf_vals = [acquisition_func(search_grid[i, :].reshape(1, -1), mo_models, mo_likls, y_best_curr) for i in range(100)]\\\n",
+    "acf_vals = [acquisition_func(search_grid[i, :].reshape(1, -1), mo_models, mo_likls, y_best_curr) for i in range(100)]\n",
     "\n",
     "acf_vals = np.array(acf_vals).reshape(100,)\n",
     "top_idx = np.argsort(acf_vals)\n",
@@ -309,64 +312,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\goura\\AppData\\Local\\Temp\\ipykernel_14908\\4118473385.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  tmp_mean, tmp_std = predict(model, liklihoods[0], torch.tensor(X, dtype=torch.float))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([0.0801]), tensor([1.7745]))"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "best_x = torch.tensor(best_x.reshape(1,-1), dtype=torch.float)\n",
-    "multi_objective_predict(best_x, mo_models, mo_likls)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\goura\\anaconda3\\envs\\gpytorch\\Lib\\site-packages\\gpytorch\\likelihoods\\gaussian_likelihood.py:300: GPInputWarning: You have passed data through a FixedNoiseGaussianLikelihood that did not match the size of the fixed noise, *and* you did not specify noise. This is treated as a no-op.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[-3.2414],\n",
-       "         [-2.1741]]),\n",
-       " tensor([[2.2303],\n",
-       "         [2.3356]]))"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cls_model.eval()\n",
-    "cls_likl.eval()\n",
-    "predict(cls_model, cls_likl, best_x)"
+    "best_x = np.reshape(best_x, (1, -1))\n",
+    "best_mean, _ = multi_objective_predict(best_x, mo_models, mo_likls)"
    ]
   },
   {
@@ -377,8 +328,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[2.6837e+03, 8.3361e+01, 1.4722e+00, 1.3654e+04, 8.6976e+01, 4.1206e+01,\n",
-       "         6.6321e+01, 8.0358e+01]])"
+       "tensor([0.0801])"
       ]
      },
      "execution_count": 40,
@@ -387,7 +337,27 @@
     }
    ],
    "source": [
-    "best_x"
+    "best_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.5632266998291016"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_best_curr"
    ]
   },
   {
