BO with regression

--- a/BO-GTData/BO_feasibility_aware.ipynb
+++ b/BO-GTData/BO_feasibility_aware.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Group ID</th>\n",
+       "      <th>Polymer Solubility</th>\n",
+       "      <th>Gelation Enthalpy</th>\n",
+       "      <th>Shear Modulus</th>\n",
+       "      <th>Manufacturability</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>#</th>\n",
+       "      <th>mg/mL</th>\n",
+       "      <th>J/g</th>\n",
+       "      <th>Kpa</th>\n",
+       "      <th>--</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51.344743</td>\n",
+       "      <td>1.25180</td>\n",
+       "      <td>4.965500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.121238</td>\n",
+       "      <td>56.63540</td>\n",
+       "      <td>0.536800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.672397</td>\n",
+       "      <td>3.46590</td>\n",
+       "      <td>1.036200</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29.114323</td>\n",
+       "      <td>2.56890</td>\n",
+       "      <td>0.998800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>123.417722</td>\n",
+       "      <td>0.14074</td>\n",
+       "      <td>1.899265</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>81.196581</td>\n",
+       "      <td>88.70100</td>\n",
+       "      <td>1.078000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>84.919473</td>\n",
+       "      <td>0.30367</td>\n",
+       "      <td>2.343650</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>64.625850</td>\n",
+       "      <td>27.80800</td>\n",
+       "      <td>3.263690</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>47.923323</td>\n",
+       "      <td>116.06000</td>\n",
+       "      <td>5.088030</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>173.697270</td>\n",
+       "      <td>2.05890</td>\n",
+       "      <td>10.186500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>47.904192</td>\n",
+       "      <td>122.74000</td>\n",
+       "      <td>0.285000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>103.370787</td>\n",
+       "      <td>16.75100</td>\n",
+       "      <td>1.845836</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>80.965909</td>\n",
+       "      <td>7.85260</td>\n",
+       "      <td>9.460780</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>63.909774</td>\n",
+       "      <td>114.01000</td>\n",
+       "      <td>41.827700</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>35.087719</td>\n",
+       "      <td>45.47800</td>\n",
+       "      <td>0.880955</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>120.218579</td>\n",
+       "      <td>1.47510</td>\n",
+       "      <td>9.700660</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>152.439024</td>\n",
+       "      <td>15.30000</td>\n",
+       "      <td>29.505300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>79.096045</td>\n",
+       "      <td>29.05000</td>\n",
+       "      <td>15.751700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>116.319444</td>\n",
+       "      <td>0.47714</td>\n",
+       "      <td>0.030895</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>57.750760</td>\n",
+       "      <td>1.65600</td>\n",
+       "      <td>0.180700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Group ID Polymer Solubility Gelation Enthalpy Shear Modulus Manufacturability\n",
+       "#                     mg/mL               J/g           Kpa                --\n",
+       "1                 51.344743           1.25180      4.965500                 1\n",
+       "2                 20.121238          56.63540      0.536800                 0\n",
+       "3                 35.672397           3.46590      1.036200                 0\n",
+       "4                 29.114323           2.56890      0.998800                 0\n",
+       "5                123.417722           0.14074      1.899265                 1\n",
+       "6                 81.196581          88.70100      1.078000                 1\n",
+       "7                 84.919473           0.30367      2.343650                 1\n",
+       "8                 64.625850          27.80800      3.263690                 1\n",
+       "9                 47.923323         116.06000      5.088030                 1\n",
+       "10               173.697270           2.05890     10.186500                 1\n",
+       "11                47.904192         122.74000      0.285000                 1\n",
+       "12               103.370787          16.75100      1.845836                 1\n",
+       "13                80.965909           7.85260      9.460780                 1\n",
+       "14                63.909774         114.01000     41.827700                 1\n",
+       "15                35.087719          45.47800      0.880955                 0\n",
+       "16               120.218579           1.47510      9.700660                 1\n",
+       "17               152.439024          15.30000     29.505300                 1\n",
+       "18                79.096045          29.05000     15.751700                 0\n",
+       "19               116.319444           0.47714      0.030895                 1\n",
+       "20                57.750760           1.65600      0.180700                 0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +257,15 @@
     "xstddv = x_pd.std(axis=0)\n",
     "x_pd_normal = (x_pd - xmeans)/xstddv\n",
     "\n",
-    "x_pd = x_pd_normal"
+    "x_pd = x_pd_normal\n",
+    "\n",
+    "x_mins = x_pd.min(axis=0).to_numpy()\n",
+    "x_maxs = x_pd.max(axis=0).to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,15 +452,8 @@
     "        pred = likl(model(X))\n",
     "        mean = pred.mean\n",
     "        std = pred.stddev\n",
-    "    return mean, std"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return mean, std\n",
+    "\n",
     "#sum the available models to convert mutli obj problem to single obj\n",
     "def multi_objective_predict(X, models, liklihoods):\n",
     "    mean = 0\n",
@@ -248,20 +462,13 @@
     "        tmp_mean, tmp_std = predict(models[i], liklihoods[i], torch.tensor(X, dtype=torch.float))\n",
     "        mean += tmp_mean\n",
     "        var += tmp_std**2\n",
-    "    return mean, var**0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return mean, var**0.5\n",
+    "\n",
     "# function to calculate acquisition function \n",
     "def acquisition_func(X, models, liklihoods, y_min_curr):\n",
     "    X = np.reshape(X, (1, -1))\n",
     "    pred_mean, pred_std = multi_objective_predict(X, models, liklihoods) \n",
-    "    improv = -y_min_curr + pred_mean\n",
+    "    improv = pred_mean - y_min_curr\n",
     "    z_score = np.divide(improv, pred_std + 1E-9)\n",
     "    acf = np.multiply(improv, norm.cdf(z_score)) + np.multiply(pred_std, norm.pdf(z_score))\n",
     "    return (-1.0) * acf "
@@ -269,33 +476,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# search for best point\n",
-    "\n",
-    "x_bounds = np.array([[2000, 10000], [0, 100], [0, 40], [5000, 15000], [80, 100], [0,100], [60, 100], [70, 100]])\n",
-    "search_grid = np.random.uniform(x_bounds[:, 0], x_bounds[:, 1], size=(100, len(x_bounds)))\n",
+    "n_restarts = 100\n",
+    "# x_bounds = np.array([[2000, 10000], [0, 100], [0, 40], [5000, 15000], [80, 100], [0,100], [60, 100], [70, 100]])\n",
+    "x_bounds = np.c_[x_mins, x_maxs]\n",
+    "search_grid = np.random.uniform(x_bounds[:, 0], x_bounds[:, 1], size=(10*n_restarts, len(x_bounds)))\n",
     "\n",
     "mo_models = [reg_model1, reg_model2]\n",
     "mo_likls = [reg_likl1, reg_likl2]\n",
     "\n",
-    "# reg_model1.eval()\n",
-    "# reg_model2.eval()\n",
-    "# reg_likl1.eval()\n",
-    "# reg_likl2.eval()\n",
+    "# Swith on eval mode\n",
     "for i in range(len(mo_models)):\n",
     "    mo_models[i].eval()\n",
     "    mo_likls[i].eval()\n",
     "\n",
-    "y_best_curr = torch.min(-(train_y1 + train_y2)).item()\n",
+    "y_best_curr = torch.max((train_y1 + train_y2)).item()\n",
     "\n",
-    "acf_vals = [acquisition_func(search_grid[i, :].reshape(1, -1), mo_models, mo_likls, y_best_curr) for i in range(100)]\n",
+    "acf_vals = [acquisition_func(search_grid[i, :].reshape(1, -1), mo_models, mo_likls, y_best_curr) for i in range(10*n_restarts)]\n",
     "\n",
-    "acf_vals = np.array(acf_vals).reshape(100,)\n",
+    "acf_vals = np.array(acf_vals).reshape(10*n_restarts,)\n",
     "top_idx = np.argsort(acf_vals)\n",
-    "search_grid = search_grid[top_idx[0:10]].reshape(10,-1)\n",
+    "search_grid = search_grid[top_idx[0:n_restarts]].reshape(n_restarts,-1)\n",
     "\n",
     "best_acquisition_values = 1\n",
     "best_x = None\n",
@@ -307,65 +512,150 @@
     "                   args=(mo_models, mo_likls, y_best_curr))\n",
     "    if res.fun < best_acquisition_values:\n",
     "        best_acquisition_values = res.fun\n",
-    "        best_x = res.x"
+    "        best_x = res.x\n",
+    "\n",
+    "new_point = best_x\n",
+    "new_acf = (-1.0) * best_acquisition_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_x = np.reshape(best_x, (1, -1))\n",
-    "best_mean, _ = multi_objective_predict(best_x, mo_models, mo_likls)"
+    "# inverse transform \n",
+    "def inverse_transform(val, mean, std):\n",
+    "    return std * val + mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted output at new point -  tensor([2.4799])\n",
+      "std deviation -  tensor([1.1549])\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred, std = multi_objective_predict(new_point.reshape(1,-1), mo_models, mo_likls)\n",
+    "print('Predicted output at new point - ', pred)\n",
+    "print('std deviation - ', std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2.4151])  and  tensor([0.0647])\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_pt_tensor = torch.tensor(new_point.reshape(1,-1), dtype=torch.float)\n",
+    "y1_pred, _ = predict(reg_model1, reg_likl1, new_pt_tensor)\n",
+    "y2_pred, _ = predict(reg_model2, reg_likl2, new_pt_tensor)\n",
+    "print(y1_pred, ' and ', y2_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0801])"
+       "array([ 1.22111523, -1.14006761, -0.46216723,  1.24853254,  0.43425369,\n",
+       "        0.17214098, -1.4405752 ,  1.41954212])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_mean"
+    "new_point"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([179.7163])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y1_pred = inverse_transform(y1_pred, ymeans.values[0], ystddv.values[0])\n",
+    "y2_pred = inverse_transform(y2_pred, ymeans.values[1], ystddv.values[1])\n",
+    "print(y1_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.5632266998291016"
+       "143.9980154794394"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_best_curr"
+    "inverse_transform(y_best_curr, ymeans.values[0], ystddv.values[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9041.774785340262,\n",
+       " 14.50141610594094,\n",
+       " 14.243751126584717,\n",
+       " 13887.588474175576,\n",
+       " 92.70429419988953,\n",
+       " 55.35999886869985,\n",
+       " 62.05777298547319,\n",
+       " 98.26019646051431]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_pt_tr = [inverse_transform(new_point[i], xmeans.values[i], xstddv.values[i]) for i in range(len(new_point))]\n",
+    "new_pt_tr"
+   ]
   }
  ],
  "metadata": {
